k8s/base/store-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-front
  labels:
    app: store-front
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: store-front
