k8s/base/store-front/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: store-front
spec:
  podSelector:
    matchLabels:
      app: store-front
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow from NGINX ingress controller namespace
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # product-service and order-service
    - to:
        - podSelector:
            matchLabels:
              app: product-service
      ports:
        - port: 3002
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - port: 3000
          protocol: TCP
